issue 137: tried to make things align vertically while being responsive, but didn't get it completely. it's in an acceptable state, but still needs copy. Needs more work.

--- a/app/assets/stylesheets/homepage-buildout.scss
+++ b/app/assets/stylesheets/homepage-buildout.scss
@@ -2,11 +2,12 @@
 
 .row__homepage {
     margin: 2em 0 0 0;
+    vertical-align: middle;
 }
 
 .col__homepage--description {
     margin: 0;
-    padding: 1em;
+    padding: 0 1em;
     text-align: left;
     vertical-align: middle;
 }
@@ -16,12 +17,13 @@
     min-width: 210px;
     min-height: 210px;
     overflow: hidden;
-    text-align: center;
-    vertical-align: middle;
+    position: relative;
 }
 
 .img__homepage--step {
- 
+    position: absolute;
+    top: 50%;
+    margin-top: -101px;
 }
 
 
